app/globals.css
@import 'highlight.js/styles/a11y-dark.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 0, 0, 15;
  --background-end-rgb: 0, 0, 15;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

html {
  scroll-behavior: smooth;
}

.markdown {
  font-family: 'Inter', sans-serif;
  line-height: 1.6;
  color: #333;
}

.markdown h1, .markdown h2, .markdown h3, .markdown h4 {
  margin-top: 1.5em;
  margin-bottom: 0.5em;
  color: white;
}

.markdown h1 {
  margin-top: 0.5em;
  font-size: 2.25rem;
  line-height: calc(2.5 / 2.25);
  border-top: solid 3px #364e96;
  border-bottom: solid 3px #364e96;
  padding: 0.5em 0;
}

.markdown h2 {
  font-size: 1.875rem;
  line-height: 1.4;
  border-left: solid 5px #ffaf58;
  padding: 2px 10px;
}

.markdown h3 {
  font-size: 1.5rem;
  line-height: 1.4;
  padding: 2px 8px;
  border-left: 6px #999 solid;
  background: linear-gradient(transparent 95%, #87CEEB 70%);
}

.markdown h4 {
  font-size: 1.25rem;
  line-height: calc(1.75 / 1.25);
  border-left: solid 4px #999;
  padding: 2px 8px;
}

.markdown p {
  margin-bottom: 1em;
  color: white;
}

.markdown ul, .markdown ol {
  margin-left: 1.5em;
  margin-bottom: 1em;
  color: white;
  @apply list-disc;
}

.markdown li {
  color: white;
}

.markdown summary {
  color: rgb(159, 159, 255);
  cursor: pointer;
}

.markdown table {
  @apply w-full text-sm text-left text-gray-500 overflow-x-auto shadow-md sm:rounded-lg m-4;
}

.markdown thead {
  color: black;
  @apply text-sm bg-gray-50;
}

.markdown th {
  @apply px-6 py-3;
}

.markdown tr {
  @apply border-b;
}

.markdown td {
  color: white;
  @apply px-6 py-3;
}

.markdown .box-speech {
  position: relative;
  margin: 2em 0 2em 40px;
  padding: 8px 15px;
  background: #e2e2e2;
  border-radius: 10px;
}

.markdown .box-speech__text {
  color: #333;
  margin-bottom: 0;
}

.markdown .point-box {
  margin: 2em 0;
  background: #f0f5ff;
}

.markdown .point-box .point-box__title {
  font-size: 1.2em;
  background: #5fb3f5;
  padding: 4px;
  text-align: center;
  color: #FFF;
  font-weight: bold;
  letter-spacing: 0.05em;
}

.markdown .point-box .point-box__content {
  padding-left: 15px;
  padding-bottom: 10px;
  margin: 0;
  color: #333;
}

.markdown .inline-code {
  background-color: #2d2d2d;
  color: #00ff00;
  padding: 0.2em 0.4em;
  border-radius: 4px;
  font-family: 'Courier New', Courier, monospace;
}

